<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

<ImageView
    android:id="@+id/img"
    android:layout_width="@dimen/layout_width"
    android:layout_height="@dimen/layout_width"
    android:src="@drawable/logo"
    android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:orientation="vertical">

        <EditText
            android:drawableLeft="@drawable/ic_person"
            android:hint="@string/name_edit"
            android:inputType="text"
            style="@style/edit_style"/>
        <EditText
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email_edit"
            android:inputType="textEmailAddress"
            style="@style/edit_style"/>

        <EditText
            android:drawableLeft="@drawable/ic_pass"
            style="@style/edit_style"
            android:hint="@string/pass_edit"
            android:inputType="textPassword"/>

        <EditText
            android:drawableLeft="@drawable/ic_pass"
            style="@style/edit_style"
            android:hint="@string/repass_edit"
            android:inputType="textPassword"/>

        <EditText
            android:drawableLeft="@drawable/ic_phone"
            style="@style/edit_style"
            android:hint="@string/phone_edit"
            android:inputType="phone"/>
        <EditText
            android:drawableLeft="@drawable/ic_location"
            style="@style/edit_style"
            android:hint="@string/address_edit"
            android:inputType="text"/>
        <Button
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:textSize="@dimen/text_size_btn"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/margin_top_btn"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>